log
Mon 10 Apr 2023 02:17:15 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:51: error: expected ‘)’ before ‘;’ token
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair);
      |                                      ~            ^
      |                                                   )
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair);
      |                      ^
hashmap.c:62:20: error: expected ‘;’ before ‘}’ token
   62 |     return new_map;
      |                    ^
      |                    ;
   63 | }
      | ~                   
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aab7e9a
Mon 10 Apr 2023 02:17:42 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
468ff8c
Mon 10 Apr 2023 02:17:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair*));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
fbe64ef
Mon 10 Apr 2023 02:18:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
98bf12f
Mon 10 Apr 2023 02:18:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5932b2d
Mon 10 Apr 2023 02:18:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
898a7e4
Mon 10 Apr 2023 02:21:26 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
ccc8398
Mon 10 Apr 2023 02:21:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
afac450
Mon 10 Apr 2023 02:22:40 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
dbe052a
Wed 12 Apr 2023 02:12:43 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
1b440d0
Wed 12 Apr 2023 02:17:37 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
0d9420a
Wed 12 Apr 2023 02:20:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb8f62d
Wed 12 Apr 2023 02:44:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ac053ef
Wed 12 Apr 2023 02:44:45 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
9ce22e2
Wed 12 Apr 2023 02:50:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
c64b425
Wed 12 Apr 2023 03:06:21 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|5
total_score: 10/70
1d3adf0
Sun 16 Apr 2023 05:26:17 AM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  4|5
total_score: 20/70
ca848d1
Sun 16 Apr 2023 05:32:38 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
a3d5ba6
Mon 17 Apr 2023 09:54:17 PM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:93:42: error: expected ‘)’ before ‘;’ token
   93 |   int hash_code = hash(key, map->capacity;
      |                       ~                  ^
      |                                          )
hashmap.c:114:1: error: expected ‘,’ or ‘;’ before ‘}’ token
  114 | }
      | ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:93:7: error: unused variable ‘hash_code’ [-Werror=unused-variable]
   93 |   int hash_code = hash(key, map->capacity;
      |       ^~~~~~~~~
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d8408c4
Mon 17 Apr 2023 09:54:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
1b9fbfe
